# Agentic-AI-Security-Testing

./: .dockerignore  .env.example  .gitignore  ATTACK_MODULES.md  Dockerfile  Dockerfile.dashboard  IMPLEMENTATION_CHECKLIST.md  README.md  architecture-diagram.eraser  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
dashboard/: nginx.conf  package.json
dashboard/public/: index.html
dashboard/src/: App.js
dashboard/src/api/: client.js
dashboard/src/components/: AttackModules.js  Dashboard.js  Layout.js  ReportViewer.js  TargetManager.js  TestResults.js  TestRunner.js
dashboard/src/components/common/: LoadingSpinner.js  RiskScore.js  SeverityBadge.js  StatusBadge.js
dashboard/src/styles/: index.css
payloads/: asi01_agent_goal_hijack.yaml  asi02_tool_misuse.yaml  asi03_identity_privilege_abuse.yaml  asi05_unexpected_code_execution.yaml  asi06_memory_context_poisoning.yaml  asi07_insecure_inter_agent_comms.yaml  asi09_human_agent_trust.yaml  asi10_rogue_agents.yaml  llm01_prompt_injection.yaml  llm02_sensitive_info_disclosure.yaml  llm06_excessive_agency.yaml  llm07_system_prompt_leakage.yaml
security/: SECURITY.md  bandit.yml  checkov.yml  docker-bench.sh  semgrep-rules.yml  trivy.yaml
src/agentic_security/: __init__.py  main.py
src/agentic_security/api/: __init__.py  app.py  database.py  dependencies.py  schemas.py
src/agentic_security/api/routers/: attacks.py  reports.py  targets.py  tests.py
src/agentic_security/api/services/: report_service.py  target_service.py  test_service.py
src/agentic_security/attacks/: __init__.py  base.py  registry.py
src/agentic_security/core/: __init__.py  base.py  config.py  enums.py  exceptions.py
src/agentic_security/orchestrator/: __init__.py  base.py  multi_turn.py  single_turn.py
src/agentic_security/payloads/: __init__.py  loader.py
src/agentic_security/reports/: __init__.py  exporters.py  generator.py  recommendations.py  risk_calculator.py  templates.py
src/agentic_security/results/: __init__.py  models.py  store.py
src/agentic_security/scorers/: __init__.py  base.py  canary_scorer.py  composite.py  llm_judge.py  pattern_scorer.py
src/agentic_security/targets/: __init__.py  anthropic_target.py  base.py  custom_target.py  openai_target.py
terraform/: .gitignore  alb.tf  cloudwatch.tf  ecr.tf  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
tests/: __init__.py  test_api.py  test_results.py  test_scorers.py
(+22 files in other folders)
