[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ai-security-testing"
version = "0.1.0"
description = "End-to-end platform for testing AI agents and LLM applications against OWASP Top 10 for LLMs and Agentic Applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Noah Frost", email = "noah@noahfrost.co.uk"}
]

keywords = [
    "ai-security",
    "prompt-injection",
    "red-teaming",
    "llm-security",
    "agentic-ai",
    "owasp",
    "security-testing",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-jose[cryptography]>=3.3.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/nfroze/Agentic-AI-Security-Testing"
Documentation = "https://github.com/nfroze/Agentic-AI-Security-Testing/wiki"
Repository = "https://github.com/nfroze/Agentic-AI-Security-Testing.git"

[tool.setuptools]
packages = ["agentic_security"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["agentic_security"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
